src/test/deca/syntax/parser/invalid/decl_var_multiple_assign_no_ident.deca
// Test de parser, le deuxieme ident est null

{
    int x, = 8;
}